新增自动构建

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Homepage: http://www.deepin.org
 Build-Depends: debhelper (>= 9)
 
 Package: baai-bge-large-zh-v1.5
-Architecture: any
+Architecture: all
 Depends: ${misc:Depends}
 Description: BAAI-bge-large-zh-v1.5 model
  BAAI bge large model for deepin modelhub.
