补充编译依赖

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,10 @@ Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Standards-Version: 3.9.8
 Homepage: http://www.deepin.org
-Build-Depends: debhelper (>= 9)
+Build-Depends:
+ debhelper (>= 9),
+ make,
+ aria2
 
 Package: baai-bge-large-zh-v1.5
 Architecture: all
